# allocators

./: .gitignore  CMakeLists.txt  allocator.c  discussion.txt  fallback.c  freelist.c  main.c  preamble.h  segregator.c  stack.c
